# jobmaster

./: .gitignore  README.md  app_log.txt  commit_msg.txt
client/: .gitignore  README.md  build.gradle.kts
client/app/: build.gradle.kts
client/app/src/main/: AndroidManifest.xml
client/app/src/main/res/values/: strings.xml
client/app/src/main/res/xml/: network_security_config.xml
client/gradle/: libs.versions.toml
client/gradle/wrapper/: gradle-wrapper.properties
docs/: README.md  api-v1.md  smart-pact-system-prd.md
server/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
server/app/: config.py  database.py  main.py
server/app/api/: auth.py  chat.py  company.py  contract.py  dashboard.py  delivery.py  jobs.py
server/app/core/: deps.py  exceptions.py  security.py
server/app/crawler/: alibaba.py  base.py  bytedance.py  tencent.py
server/app/models/: __init__.py  chat.py  company.py  contract.py  job.py  resume.py  user.py
server/app/schemas/: __init__.py  auth.py  chat.py  common.py  company.py  contract.py  dashboard.py  delivery.py  jobs.py
server/app/services/: __init__.py  ai_service.py  auth_service.py  company_service.py  contract_service.py  dashboard_service.py  delivery_service.py  demo_store.py  job_service.py  pagination.py
server/app/tasks/: ai_tasks.py  celery_app.py  crawl_tasks.py  delivery_tasks.py
server/job_master_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/tests/test_api/: test_demo_api.py
server/tests/test_services/: test_security.py
(+31 files in other folders)
